--- a/guide.html
+++ b/guide.html
@@ -425,24 +425,38 @@
                     width: 123px;
                 }
 
-                .you-ready .arrow.down-arrow-second {
-                    top: 744px;
-                    right: 37%;
-                    transform: rotate(-14deg);
-                    width: 130px;
-                }
-
                 .you-ready .briefcase {
                     right: 85%;
                 }
 
                 .you-ready .computer {
-                    top: 791px;
+                    top: 379px;
+                    right: 32%;
                 }
 
                 .you-ready .lamp {
                     top: 40%;
                 }
+
+                .you-ready .deco.elipse3 {
+                    top: 396px;
+                    right: 88%;
+                }
+
+                .you-ready .deco.polygon3 {
+                    top: 28%;
+                    right: 34%;
+                }
+
+                .you-ready .briefcase {
+                    top: 16%;
+                }
+
+                .you-ready .deco.polygon2 {
+                    top: 58%;
+                    right: 65%;
+                }
+
 
             }
 
@@ -656,6 +670,10 @@
                 .help .logo img {
                     width: 135px;
                 }
+
+                .graphic-design .text h2 {
+                    font-size: 20px;
+                }
             }
         </style>
     </head>
@@ -724,33 +742,31 @@
                 </div>
                 <div class="row justify-content-center additional-courses">
                     <div class="col-12 col-md-4">
-                        <h5 class="font-weight-bold d-none d-sm-block">دورات اضافية</h5>
-                        <div class="divider mb-5 d-none d-sm-block"></div>
+                        <h5 class="font-weight-bold ">دورات اضافية</h5>
+                        <div class="divider mb-5"></div>
                         <div class="img">
                             <img src="./guide-imgs/character-design.svg" alt="character-design">
                         </div>
                         <div class="text mt-4">
                             <h6>رسم الشخصيات</h6>
-                            <h6 class="font-weight-bold d-block d-sm-none mt-4">دورات اضافية</h6>
                             <a href="#">أعرف المزيد<img class="ml-3" src="./guide-imgs/fi-rr-arrow-left.svg"
                                     alt="arrow-left"></a>
                         </div>
                     </div>
                 </div>
                 <img class="arrow down-arrow" src="./guide-imgs/down-arrow.svg" alt="arrow">
-                <img class="arrow down-arrow-second d-block d-md-none" src="./guide-imgs/down-arrow.svg" alt="arrow">
                 <img class="arrow reversed-down-arrow d-block d-md-none" src="./guide-imgs/reversed-down-arrow.png"
                     alt="arrow">
                 <img class="arrow right-arrow d-none d-md-block" src="./guide-imgs/right-arrow.svg" alt="arrow">
             </div>
             <img src="./guide-imgs/circle.svg" alt="circle" class="top-circle circle">
             <img src="./guide-imgs/circle.svg" alt="circle" class="bottom-circle circle">
-            <img src="./guide-imgs/ellipse.svg" alt="elipse" class="deco elipse1">
+            <img src="./guide-imgs/ellipse.svg" alt="elipse" class="deco elipse1  d-none d-md-block">
             <img src="./guide-imgs/ellipse.svg" alt="elipse" class="deco elipse2">
             <img src="./guide-imgs/ellipse.svg" alt="elipse" class="deco elipse3">
             <img src="./guide-imgs/polygon.svg" alt="elipse" class="deco polygon1">
             <img src="./guide-imgs/polygon.svg" alt="elipse" class="deco polygon2">
-            <img src="./guide-imgs/polygon.svg" alt="elipse" class="deco polygon3">
+            <img src="./guide-imgs/polygon.svg" alt="elipse" class="deco polygon3 d-none d-md-block">
             <img src="./guide-imgs/computer.svg" alt="elipse" class="deco computer">
             <img src="./guide-imgs/lamp.svg" alt="elipse" class="deco lamp">
             <img src="./guide-imgs/briefcase.svg" alt="elipse" class="deco briefcase">
